# automl

./: .gitignore  app.py  pyproject.toml  v0x.py  v1-test.py  v1-train.py  v1.py  v2-test.py  v2-train.py
data/: tmp_dataset.csv
scripts/: json_to_csv.py  v1-test.py  v1-train.py  v2-test.py  v2-train.py
